--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=yes, viewport-fit=cover" />
     <meta name="theme-color" content="#FAFAFA" />
     <title>Pushr</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon_io (16)/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon_io (16)/favicon-16x16.png" />
-    <link rel="apple-touch-icon" href="/images/favicon_io (16)/apple-touch-icon.png" />
-    <link rel="manifest" href="/images/favicon_io (16)/site.webmanifest" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/pushr/images/favicon_io (16)/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/pushr/images/favicon_io (16)/favicon-16x16.png" />
+    <link rel="apple-touch-icon" href="/pushr/images/favicon_io (16)/apple-touch-icon.png" />
+    <link rel="manifest" href="/pushr/images/favicon_io (16)/site.webmanifest" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -192,10 +192,10 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="/pushr/index.css">
 </head>
   <body class="bg-gray-50 text-gray-900 antialiased">
     <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
+  <script type="module" src="/pushr/index.tsx"></script>
 </body>
 </html>
